--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,9 +1,9 @@
-{% load static %}
  <!DOCTYPE html>
  <html>
  <head>
+  {% load static %}
   <title>{% block title %}{% endblock %}</title>
-  <!-- <link href="{% static "css/blog.css" %}" rel="stylesheet"> -->
+  <link href="{% static 'css/blog.css' %}" rel="stylesheet">
  </head>
  <body>
   <div id="content">
