--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -13,7 +13,7 @@
  </p>
 
 
- 
+
   {% with comments.count as total_comments %}
   <h2>
     {{ total_comments }} comment{{ total_comments|pluralize }}
@@ -31,7 +31,14 @@
   <p>There are no comments yet.</p>
  {% endfor %}
 
-
+ <h2>Similar posts</h2>
+ {% for post in similar_posts %}
+  <p>
+    <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+  </p>
+ {% empty %}
+  There are no similar posts yet.
+ {% endfor %}
  {% if new_comment %}
   <h2>Your comment has been added.</h2>
  {% else %}
